--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 ## RefinedKernel for the Galaxy J5/J7 Pro (2017)
 
+E.O.L - Moved to V3 in a new Repo.
+
 Built with J530FXXU1AQI3 Source
 
 Current supported variants --
